<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="contacts"
                  type="com.devfx.simpleapp.models.Contacts"/>
    </data>
    <ScrollView
            android:layout_width="fill_parent"
            android:fillViewport="true"
            android:layout_height="fill_parent">

        <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:id="@+id/imgAvatar"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimary"/>

            <EditText
                    android:hint="@string/hint_name"
                    android:id="@+id/edtName"
                    android:inputType="text"
                    android:text="@{contacts.name}"
                    style="@style/DefaultEditText"/>

            <EditText
                    android:hint="@string/hint_lastname"
                    android:inputType="text"
                    android:id="@+id/edtLastName"
                    android:text="@{contacts.lastname}"
                    style="@style/DefaultEditText"/>

            <EditText
                    android:hint="@string/hint_age"
                    android:inputType="number"
                    android:id="@+id/edtAge"
                    android:digits="@string/base_digits"
                    android:text="@{contacts.age}"
                    style="@style/DefaultEditText"/>

            <EditText
                    android:hint="@string/hint_phone"
                    android:id="@+id/edtPhone"
                    android:inputType="phone"
                    android:text="@{contacts.phone}"
                    style="@style/DefaultEditText"/>

            <Button
                    android:id="@+id/btnSave"
                    android:text="@string/lbl_save"
                    style="@style/DefaultButton"/>


        </LinearLayout>

    </ScrollView>
</layout>
